--- a/linear_regression/Linear_Regression_Salary_Dataset.ipynb
+++ b/linear_regression/Linear_Regression_Salary_Dataset.ipynb
@@ -991,7 +991,7 @@
         "\n",
         "# Interactive prediction\n",
         "print(\"\\n\" + \"=\"*70)\n",
-        "print(\"💡 TRY YOUR OWN PREDICTION\")\n",
+        "print(\"TRY YOUR OWN PREDICTION\")\n",
         "print(\"=\"*70)"
       ],
       "metadata": {
@@ -999,9 +999,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RLJ8Ysp33LSl",
-        "outputId": "137344ed-2ec4-45da-e287-772244394602"
+        "outputId": "8e61a63f-a0c7-461c-96d3-eb5e203622f4"
       },
-      "execution_count": 109,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,7 +1021,7 @@
             " 90 months (7.5 years) experience → $79.25k salary\n",
             "\n",
             "======================================================================\n",
-            "💡 TRY YOUR OWN PREDICTION\n",
+            "TRY YOUR OWN PREDICTION\n",
             "======================================================================\n"
           ]
         }
